--- a/css/style3.css
+++ b/css/style3.css
@@ -6,18 +6,18 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   background: #222;
-  background-image: url('https://source.unsplash.com/1600x900/?landscape');
   font-size: 120%;
 }
 
 .card {
-  background: #000000d0;
+  background: #096d3f00;
   color: white;
   padding: 2em;
   border-radius: 30px;
   width: 100%;
   max-width: 420px;
   margin: 1em;
+  border: 1px solid #057b0563;
 }
 
 .search {
