--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -1,25 +1,27 @@
 nav {
 	margin: 27px auto 0;
+    position: relative;
+    width: 590px;
+    height: 50px;
+    background-color: #000000;
+    border-radius: 8px;
+    font-size: 0;
+    border: 1px #00fbac solid;
 
-	position: relative;
-	width: 590px;
-	height: 50px;
-	background-color: #34495e;
-	border-radius: 8px;
-	font-size: 0;
 }
 nav a {
 	line-height: 50px;
-	height: 100%;
-	font-size: 15px;
-	display: inline-block;
-	position: relative;
-	z-index: 1;
-	text-decoration: none;
-	text-transform: uppercase;
-	text-align: center;
-	color: white;
-	cursor: pointer;
+    height: 100%;
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    color: #00fbac;
 }
 nav .animation {
 	position: absolute;
@@ -47,27 +49,27 @@ a:nth-child(5) {
 nav .start-home, a:nth-child(1):hover~.animation {
 	width: 100px;
 	left: 0;
-	background-color: #1abc9c;
+	background-color: #d200fc;
 }
 nav .start-about, a:nth-child(2):hover~.animation {
 	width: 110px;
 	left: 100px;
-	background-color: #e74c3c;
+	background-color: #f81a01;
 }
 nav .start-blog, a:nth-child(3):hover~.animation {
 	width: 100px;
 	left: 210px;
-	background-color: #3498db;
+	background-color: #0095f8;
 }
 nav .start-portefolio, a:nth-child(4):hover~.animation {
 	width: 160px;
 	left: 310px;
-	background-color: #9b59b6;
+	background-color: #03fca9;
 }
 nav .start-contact, a:nth-child(5):hover~.animation {
 	width: 120px;
 	left: 470px;
-	background-color: #e67e22;
+	background-color: #ff7700;
 }
 
 body {
@@ -77,27 +79,91 @@ body {
 }
 h1 {
 	text-align: center;
-	margin: 40px 0 40px;
-	text-align: center;
-	font-size: 30px;
-	color: #ecf0f1;
-	text-shadow: 2px 2px 4px #000000;
-	font-family: 'Cherry Swash', cursive;
+    margin: 40px 0 40px;
+    text-align: center;
+    font-size: 30px;
+    color: #ecf0f1;
+    text-shadow: 2px 2px 4px #000000;
+    font-family: 'Cherry Swash', cursive;
+    color: #00fbac;
 }
 
 p {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    text-align: center;
+	text-align: center;
     color: #ecf0f1;
-    font-family: 'Cherry Swash',cursive;
+    font-family: 'Cherry Swash', cursive;
     font-size: 16px;
+    text-shadow: 2px 2px 4px #00fbac;
 }
 
 span {
-    color: #2BD6B4;
+    color: #00fbac;
+    text-transform: uppercase;
+    filter: drop-shadow(0px 0px 10px #00fbac);
 }
+
 .a2{
     font-size: 11px;
+}
+* {
+	margin: 0;
+	padding: 0;
+
+  }
+
+  canvas#canvas {
+	display: block;
+    background: #000;
+    position: fixed;
+    top: 0;
+    z-index: -1;
+  }
+
+  ul#navigation {
+	position: absolute;
+	height: 100%;
+	top: 0;
+	right: 0;
+	text-align: center;
+	margin-right: 1.6rem;
+	font-size: 0.8rem;
+	-webkit-writing-mode: vertical-rl;
+		-ms-writing-mode: tb-rl;
+			writing-mode: vertical-rl;
+  }
+
+  ul#navigation > li {
+	display: inline-block;
+	color: #FFF;
+  }
+
+box{
+	height: 200px;
+    width: 200px;
+    border: 1px solid #333;
+    transition: all 0.4s ease;
+    display: block;
+    background: wheat;
+    border-radius: 5px;
+    margin-left: 10%;
+    position: relative;
+    top: 5%;
+}
+
+.input{
+	width: 199px;
+    height: 22px;
+    border-radius: 6px;
+    margin-left: 10%;
+    margin-top: 7%;
+}
+
+.divBox{
+    height: 250px;
+    width: 250px;
+    background-color: white;
+    margin-left: 45%;
+    margin-top: 1%;
+    border-radius: 5%;
+    border: 1px solid #000000;
 }
