--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -318,3 +318,56 @@ box{
         margin-right: -48%;
     }
 }
+ul {
+    list-style: none;
+  }
+  .context-menu {
+    position: absolute;
+    box-shadow: 0px 0px 20px -5px black;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgb(64 64 64 / 5%);
+    padding: 10px 0;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin: 0;
+  }
+  .menu > li > a {
+    font: inherit;
+    border: 0;
+    padding: 10px 30px 10px 15px;
+    width: 73%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    text-decoration: unset;
+    color: #000;
+    font-weight: 500;
+    transition: 0.5s linear;
+    -webkit-transition: 0.5s linear;
+    -moz-transition: 0.5s linear;
+    -ms-transition: 0.5s linear;
+    -o-transition: 0.5s linear;
+  }
+  .menu > li > a:hover {
+    background:#f1f3f7;
+    color: #4b00ff;
+  }
+  .menu > li > a > i {
+    padding-right: 10px;
+  }
+  .menu > li.trash > a:hover {
+    color: red;
+  }
+  .fist_a{
+    padding-top: 20px;
+    border-radius: 10px 15px 0px 0px;
+  }
+  .last_a{
+    padding-bottom: 20px;
+    border-radius: 0px 0px 10px 10px;
+  }
