--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@
   background: #f2f2f2;
   width: 100%;
   border: 0;
-  margin: 0 0 15px;
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
@@ -48,6 +47,7 @@
   transition: all 0.3 ease;
   cursor: pointer;
   border-radius: 7px;
+  margin-top: 15px;
 }
 .form button:hover,.form button:active,.form button:focus {
   background-image: linear-gradient(45deg, #1a651d, #4caf50, #1a651d);
@@ -140,6 +140,8 @@ body {
   color: red;
   text-shadow: 0px 0px 8px black;
   display: none;
+  margin-top: 13px;
+    margin-bottom: -13px;
 }
 .modal{
   box-shadow: 0px 0px 20px 0px black;
@@ -170,6 +172,7 @@ body {
 
 .form .form-element {
   position: relative;
+  margin-top: 15px;
 }
 
 
@@ -229,4 +232,64 @@ body {
 
 .form .form-element .password-policies>div.active {
   color: #111;
+}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+
+
+.form1{
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+}
+form i{
+  position: absolute;
+  width: 55px;
+  text-align: center;
+  font-size: 23px;
+  color: #c4c4c4;
+  pointer-events: none;
+}
+form input:valid ~ i{
+  color: #58cff1;
+}
+form input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding: 0 50px 0 45px;
+  font-size: 20px;
+  caret-color: #58cff1;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  transition: all 0.1s ease;
+}
+form input::selection{
+  color: #fff;
+  background: #58cff1;
+}
+form input:focus,
+form input:valid{
+  border-color: #58cff1;
+}
+form input::placeholder{
+  color: #c4c4c4;
+}
+form .counter{
+  position: absolute;
+  right: 3px;
+  width: 55px;
+  font-size: 20px;
+  color: #c4c4c4;
+  text-align: center;
+  border-left: 1px solid #d8d8d8;
+  pointer-events: none;
+}
+form input:valid ~ .counter{
+  color: #58cff1;
+  border-color: #58cff1;
+}
+#username{
+  padding-left: 40px;
 }
