--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ body {
   font-size: 20px;
   font-weight: bold;
   position: absolute;
-  z-index: 999;
+  z-index: 1;
   right: 10px;
   top: 10px;
   transition: all 1s linear;
@@ -292,4 +292,46 @@ form input:valid ~ .counter{
 }
 #username{
   padding-left: 40px;
+}
+.modal-parent{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  display: none;
+  z-index: 1;
+}
+#modal{
+  background: white;
+  width: 70%;
+  padding: 30px;
+  border-radius: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 22px;
+  font-family: arial;
+  position: relative;
+  animation: 0.5s drop;
+}
+@keyframes drop {
+  0%{
+    top: -100px;
+  }
+  100%{
+    top: 50%;
+  }
+}
+.X{
+  position: absolute;
+  right: 20px;
+  top: 5px;
+  font-size: 40px;
+  cursor: pointer;
+
+}
+section{
+  transition: 2s;
 }
