--- a/css/stylePlayer.css
+++ b/css/stylePlayer.css
@@ -138,6 +138,14 @@ h3 {
   position: relative;
   top: 3px;
 }
+@media (max-width: 400px) {
+  .fas{
+    font-size: 25px;
+  }
+  .main-button{
+    font-size: 35px;
+  }
+}
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
   .player-container {
