--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -885,6 +885,7 @@ transition: 0.3s;
     background-color: #107abe;
     top: 0px;
     box-shadow: 0px 0px 20px 10px #107abe;
+    right: 0px;
 }
 .dark .scroll {
     background-color: #00fbac;
